--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="src/styles.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="src/styles.css" />
     <title>Weather App</title>
   </head>
   <body cz-shortcut-listen="true">
@@ -43,14 +43,14 @@
                   <h1>El Paso</h1>
                   <ul>
                     <li>
-                      <span> "Thursday" "10" ":" "49" </span>
-                      ", " "broken clouds"
+                      <span> Thursday 10:49 </span>
+                      , broken clouds
                     </li>
                     <li>
-                      "Humidity: "
-                      <strong> "68" "%" </strong>
-                      ", Wind:"
-                      <strong> "4,92" "km/h" </strong>
+                      Humidity:
+                      <strong> 68% </strong>
+                      , Wind:
+                      <strong> 4,92 km/h </strong>
                     </li>
                   </ul>
                 </div>
