--- a/index.html
+++ b/index.html
@@ -49,10 +49,9 @@
                       , <span id="description">broken clouds</span>
                     </li>
                     <li>
-                      Humidity: <span id="Humidity"></span>
-                      <strong> 68% </strong>
-                      , Wind: <span id="Wind"></span>
-                      <strong> 4,92 km/h </strong>
+                      Humidity:
+                      <span id="humidity"> <strong> 68% </strong></span> , Wind:
+                      <span id="wind"> <strong> 4,92 km/h </strong></span>
                     </li>
                   </ul>
                 </div>
