--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
                     </li>
                     <li>
                       Humidity:
-                      <span id="humidity"> <strong> 68% </strong></span> , Wind:
+                      <span id="humidity"> <strong> 68 % </strong></span> ,
+                      Wind:
                       <span id="wind"> <strong> 4,92 km/h </strong></span>
                     </li>
                   </ul>
@@ -59,7 +60,7 @@
                   <div class="temperature-container d-flex justify-content-end">
                     <canvas width="52" height="52"></canvas>
                     <div>
-                      <span class="temperature">10</span>
+                      <span class="temperature" id="currentTemp">10</span>
                       <span class="unit">°C</span>
                     </div>
                   </div>
