--- a/index.html
+++ b/index.html
@@ -45,12 +45,14 @@
                   <h1 id="currentCity">El Paso</h1>
                   <ul>
                     <li>
+                      Last Updated:
                       <span id="currentDate"> Thursday 10:49 </span>
-                      , <span id="description">broken clouds</span>
+                      <span id="description">broken clouds</span>
                     </li>
                     <li>
                       Humidity:
-                      <span id="humidity"> <strong> 68 % </strong></span> ,
+                      <span id="humidity"> <strong> 68 % </strong></span>
+                      <br />
                       Wind:
                       <span id="wind"> <strong> 4,92 km/h </strong></span>
                     </li>
@@ -58,7 +60,7 @@
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-8">
                   <div class="temperature-container d-flex justify-content-end">
-                    <canvas width="52" height="52"></canvas>
+                    <img src="" alt="" id="icon" />
                     <div>
                       <span class="temperature" id="currentTemp">10</span>
                       <span class="unit">°C</span>
@@ -119,7 +121,12 @@
                 </div>
               </div>
             </div>
-            <footer></footer>
+            <footer>
+              <a href="https://github.com/LarkAlo/Weather-App" target="_blank">
+                Open-Source</a
+              >
+              by Kimberly Cossio
+            </footer>
           </div>
         </div>
       </div>
