--- a/index.html
+++ b/index.html
@@ -51,10 +51,11 @@
                     </li>
                     <li>
                       Humidity:
-                      <span id="humidity"> <strong> 68 % </strong></span>
-                      <br />
+                      <span id="humidity">17</span>%
+                    </li>
+                    <li>
                       Wind:
-                      <span id="wind"> <strong> 4,92 km/h </strong></span>
+                      <span id="wind"></span>4 km/h
                     </li>
                   </ul>
                 </div>
@@ -62,8 +63,11 @@
                   <div class="temperature-container d-flex justify-content-end">
                     <img src="" alt="" id="icon" />
                     <div>
-                      <span class="temperature" id="currentTemp">10</span>
-                      <span class="unit">°C</span>
+                      <strong class="temperature" id="currentTemp">10</strong>
+                      <span class="units"
+                        ><a href="#" id="celsius-link">°C</a> |
+                        <a href="#" id="fahrenheit-link">°F</a></span
+                      >
                     </div>
                   </div>
                 </div>
