--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     <img src="" alt="" id="icon" />
                     <div>
                       <strong class="temperature" id="currentTemp">10</strong>
-                      <span class="units"
+                      <span class="units" id="links"
                         ><a href="#" id="celsius-link">°C</a> |
                         <a href="#" id="fahrenheit-link">°F</a></span
                       >
