--- a/index.html
+++ b/index.html
@@ -77,7 +77,12 @@
               <div class="col">
                 <div class="WeatherForecastPreview">
                   <div class="forecast-time">Thu</div>
-                  <canvas width="38" height="38"></canvas>
+                  <img
+                    src="http://openweathermap.org/img/wn/50d@2x.png"
+                    alt=""
+                    width="100"
+                    height="100"
+                  />
                   <div class="forecast-temperature">
                     <span class="forecast-temperature-max">11°</span>
                     <span class="forecast-temperature-min">8°</span>
@@ -87,7 +92,12 @@
               <div class="col">
                 <div class="WeatherForecastPreview">
                   <div class="forecast-time">Fri</div>
-                  <canvas width="38" height="38"></canvas>
+                  <img
+                    src="http://openweathermap.org/img/wn/50d@2x.png"
+                    alt=""
+                    width="100"
+                    height="100"
+                  />
                   <div class="forecast-temperature">
                     <span class="forecast-temperature-max">12°</span>
                     <span class="forecast-temperature-min">7°</span>
@@ -97,7 +107,12 @@
               <div class="col">
                 <div class="WeatherForecastPreview">
                   <div class="forecast-time">Sat</div>
-                  <canvas width="38" height="38"></canvas>
+                  <img
+                    src="http://openweathermap.org/img/wn/50d@2x.png"
+                    alt=""
+                    width="100"
+                    height="100"
+                  />
                   <div class="forecast-temperature">
                     <span class="forecast-temperature-max">12°</span>
                     <span class="forecast-temperature-min">7°</span>
@@ -107,7 +122,12 @@
               <div class="col">
                 <div class="WeatherForecastPreview">
                   <div class="forecast-time">Sun</div>
-                  <canvas width="38" height="38"></canvas>
+                  <img
+                    src="http://openweathermap.org/img/wn/50d@2x.png"
+                    alt=""
+                    width="100"
+                    height="100"
+                  />
                   <div class="forecast-temperature">
                     <span class="forecast-temperature-max">11°</span>
                     <span class="forecast-temperature-min">7°</span>
@@ -117,7 +137,12 @@
               <div class="col">
                 <div class="WeatherForecastPreview">
                   <div class="forecast-time">Mon</div>
-                  <canvas width="38" height="38"></canvas>
+                  <img
+                    src="http://openweathermap.org/img/wn/50d@2x.png"
+                    alt=""
+                    width="100"
+                    height="100"
+                  />
                   <div class="forecast-temperature">
                     <span class="forecast-temperature-max">11°</span>
                     <span class="forecast-temperature-min">7°</span>
