--- a/index.html
+++ b/index.html
@@ -73,83 +73,7 @@
                 </div>
               </div>
             </div>
-            <div class="WeatherForecast row">
-              <div class="col">
-                <div class="WeatherForecastPreview">
-                  <div class="forecast-time">Thu</div>
-                  <img
-                    src="http://openweathermap.org/img/wn/50d@2x.png"
-                    alt=""
-                    width="100"
-                    height="100"
-                  />
-                  <div class="forecast-temperature">
-                    <span class="forecast-temperature-max">11°</span>
-                    <span class="forecast-temperature-min">8°</span>
-                  </div>
-                </div>
-              </div>
-              <div class="col">
-                <div class="WeatherForecastPreview">
-                  <div class="forecast-time">Fri</div>
-                  <img
-                    src="http://openweathermap.org/img/wn/50d@2x.png"
-                    alt=""
-                    width="100"
-                    height="100"
-                  />
-                  <div class="forecast-temperature">
-                    <span class="forecast-temperature-max">12°</span>
-                    <span class="forecast-temperature-min">7°</span>
-                  </div>
-                </div>
-              </div>
-              <div class="col">
-                <div class="WeatherForecastPreview">
-                  <div class="forecast-time">Sat</div>
-                  <img
-                    src="http://openweathermap.org/img/wn/50d@2x.png"
-                    alt=""
-                    width="100"
-                    height="100"
-                  />
-                  <div class="forecast-temperature">
-                    <span class="forecast-temperature-max">12°</span>
-                    <span class="forecast-temperature-min">7°</span>
-                  </div>
-                </div>
-              </div>
-              <div class="col">
-                <div class="WeatherForecastPreview">
-                  <div class="forecast-time">Sun</div>
-                  <img
-                    src="http://openweathermap.org/img/wn/50d@2x.png"
-                    alt=""
-                    width="100"
-                    height="100"
-                  />
-                  <div class="forecast-temperature">
-                    <span class="forecast-temperature-max">11°</span>
-                    <span class="forecast-temperature-min">7°</span>
-                  </div>
-                </div>
-              </div>
-              <div class="col">
-                <div class="WeatherForecastPreview">
-                  <div class="forecast-time">Mon</div>
-                  <img
-                    src="http://openweathermap.org/img/wn/50d@2x.png"
-                    alt=""
-                    width="100"
-                    height="100"
-                  />
-                  <div class="forecast-temperature">
-                    <span class="forecast-temperature-max">11°</span>
-                    <span class="forecast-temperature-min">7°</span>
-                  </div>
-                </div>
-              </div>
-            </div>
+            <div class="WeatherForecast row" id="forecast"></div>
             <footer>
               <a href="https://github.com/LarkAlo/Weather-App" target="_blank">
                 Open-Source</a
